<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_categoria" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_nombre" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_descripcion" />

    <TextView
        android:id="@+id/tvPublico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_publico" />
</LinearLayout>