<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetalleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_categoria" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nombre" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_descripcion" />

        <TextView
            android:id="@+id/tvPublico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_publico" />

        <TextView
            android:id="@+id/tvAcepto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_acepto" />

    </LinearLayout>

</FrameLayout>